[package]
name = "slugify-core"
version = "0.1.0"
edition = "2021"
description = "Fast, Unicode-aware slug generation library with multi-language bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-core-libs/slugify-core"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unicode-normalization = "0.1"
unicode-segmentation = "1.10"

[dev-dependencies]
serde_json = "1.0"
